Re struce code, adding controller direct to panel

--- a/1.Source/LibraryManagementApplication/pom.xml
+++ b/1.Source/LibraryManagementApplication/pom.xml
@@ -40,9 +40,14 @@
                     <include>**/*.json</include>
                 </includes>
             </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.jpg</include>
+                </includes>
+            </resource>
         </resources>
         <plugins>
-       
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
