--- a/1.Source/LibraryManagementApplication/pom.xml
+++ b/1.Source/LibraryManagementApplication/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>modelmapper</artifactId>
             <version>3.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.toedter</groupId>
+            <artifactId>jcalendar</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
