--- a/1.Source/LibraryManagementApplication/pom.xml
+++ b/1.Source/LibraryManagementApplication/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>jcalendar</artifactId>
             <version>1.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
